# clio-relay

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  TASK.md  hatch_build.py  pyproject.toml
.github/scripts/: authenticated-git.sh  release-api.sh
.github/workflows/: ci.yml  finalize-release.yml  live-validation-attest.yml  main-provenance.yml  release-gate.yml  release.yml  released-validation-attest.yml  stage-candidate.yml
docs/: ARCHITECTURE.md  architecture.md  brand.md  connect-desktop-homelab-cluster.md  operations.md  release-acceptance-1.0.md  release-gate-1.0.yaml  release.md  remote-mcp-federation.md  runtime-capability-boundary.md
docs/ai/: README.md  interface-context.md  jarvis-service-runtime-binding-validation-2026-07-15.md  lifecycle-scheduler-live-validation.md  release-validation-0.9.14.md  release-validation-0.9.17.md  release-validation-0.9.22.md  release-validation-0.9.5.md  release-validation-0.9.9.md  service-runtime-validation-2026-07-09.md  system-context.md  testing-context.md
examples/ares-lammps/: in.lj  pipeline.yaml
examples/ares-lammps-long/: pipeline.yaml
examples/ares-recovery/: pipeline.yaml
examples/ares-scheduler-lifecycle/: pipeline.yaml
examples/release-gate/: README.md  ares-bootstrap-echo.yaml.tmpl  ares-secure-runtime.yaml.tmpl  gray-scott-direct-build.sh  homelab-transport-echo.yaml.tmpl  lammps-bounded.in  owned-cancel-ares.yaml.tmpl  owned-cleanup-ares.yaml.tmpl  owned-cleanup-homelab.yaml.tmpl  report-matrix-1.0.json  spack-fresh-store.sh
examples/release-gate/gateway/: ares-runtime.json.tmpl  external_runtime.py  homelab-runtime.json.tmpl  http_service.py  slurm_cancel.py  slurm_status.py  slurm_submit.sh
jarvis-packages/clio-relay/: README.md
jarvis-packages/clio-relay/bounded-command/: package.yaml  run.py
jarvis-packages/clio-relay/codex-agent/: package.yaml  run.py
jarvis-packages/clio-relay/mcp-call/: package.yaml  run.py
jarvis-packages/clio-relay/remote-agent/: package.yaml  run.py
jarvis-packages/clio_relay/bounded_command/: __init__.py  pkg.py
jarvis-packages/clio_relay/clio_relay/: __init__.py  _jarvis_api.py  process_containment.py
jarvis-packages/clio_relay/clio_relay/bounded_command/: pkg.py  progress.py
jarvis-packages/clio_relay/codex_agent/: __init__.py
src/clio_relay/: __init__.py  application_profiles.py  bootstrap.py  bootstrap_acceptance.py  bootstrap_journal.py  bootstrap_provider_build_info.py  bootstrap_reconcile.py  bounded_process.py  browser_gateway.py  ci_validation.py  cli.py  cluster_config.py  command_evidence.py  config.py  core_queue.py  deployment.py  doctor.py  endpoint.py  endpoint_service_status.py  errors.py  filesystem_paths.py  frp_check.py  http_api.py  identifiers.py  input_staging.py  installation.py  jarvis_execution.py  jarvis_mcp.py  jarvis_mcp_validation.py  jarvis_provider.py  jarvis_service_runtime.py  live_acceptance.py  mcp_server.py  mcp_stdio_validation.py  models.py  owner_session_admission.py  pagination.py  process_containment.py  progress_adapters.py  progress_provenance.py  (+28 more)
src/clio_relay/_contracts/: jarvis-user-v3.1.json  jarvis-user-v3.2.json  jarvis-user-v3.3.json  jarvis-user-v3.4.json  jarvis-user-v3.5.json  jarvis-user-v3.6.json  jarvis-user-v3.json  scientific-catalog-user-v1.1.json  scientific-catalog-user-v1.json  spack-user-v2.1.json  spack-user-v2.json
src/clio_relay/app_profiles/: __init__.py
src/clio_relay/package_adapters/: __init__.py  lammps.py
tests/: __init__.py  gateway_ownership_crash_fixture.py  hard_crash_pre_release_fixture.py  hard_crash_worker_fixture.py  jarvis_mcp_fakes.py  live_process_containment_probe.py  plugin_fakes.py  queue_transition_crash_fixture.py  queue_validation_fixtures.py  storage_crash_fixture.py  test_acceptance_report_defaults.py  test_application_profiles.py  test_artifact_lineage.py  test_bootstrap.py  test_bootstrap_acceptance.py  test_bootstrap_candidate_payload.py  test_bootstrap_cluster_paths.py  test_bootstrap_fast_path.py  test_bootstrap_journal.py  test_bootstrap_lock_upgrade.py  test_bootstrap_reconcile.py  test_bounded_command_package.py  test_bounded_command_progress.py  test_bounded_process.py  test_browser_attachment_queue.py  test_browser_gateway.py  test_ci_clio_kit_wheel.py  test_ci_validation.py  test_cli.py  test_clio_kit_mcp_contracts.py  test_cluster_config.py  test_command_evidence.py  test_config.py  test_control_query_admission.py  test_core_global_pagination.py  test_core_idempotency.py  test_core_index_safety.py  test_core_retention.py  test_doctor_and_relay_host.py  test_endpoint.py  (+71 more)
(+7 files in other folders)
