[project]
name = "clio-relay"
version = "0.9.10"
description = "Cluster relay endpoints backed by clio-core and JARVIS-CD."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "filelock>=3.15",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "typer>=0.12",
    "uvicorn>=0.30",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/iowarp/clio-relay"
Repository = "https://github.com/iowarp/clio-relay"
Issues = "https://github.com/iowarp/clio-relay/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clio_relay"]

[tool.hatch.build.targets.wheel.force-include]
"jarvis-packages" = "clio_relay/assets/jarvis-packages"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "jarvis-packages",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "uv.lock",
]

[project.scripts]
clio-relay = "clio_relay.cli:app"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
