[project]
name = "clio-relay"
version = "1.4.13"
description = "Cluster relay endpoints backed by clio-core and JARVIS-CD."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "filelock>=3.15",
    "httpx>=0.27",
    "jsonschema>=4.23",
    "packaging>=24.2",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "typer>=0.12",
    "uvicorn>=0.30",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/iowarp/clio-relay"
Repository = "https://github.com/iowarp/clio-relay"
Issues = "https://github.com/iowarp/clio-relay/issues"

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clio_relay"]

[tool.hatch.build.targets.wheel.force-include]
"jarvis-packages" = "clio_relay/assets/jarvis-packages"
"jarvis-packages/clio_relay/clio_relay/_jarvis_api.py" = "clio_relay/_jarvis_api.py"
"jarvis-packages/clio_relay/clio_relay/bounded_command" = "clio_relay/bounded_command"
"jarvis-packages/clio_relay/clio_relay/mcp_call" = "clio_relay/mcp_call"
"jarvis-packages/clio_relay/clio_relay/remote_agent" = "clio_relay/remote_agent"

[tool.hatch.build.targets.sdist]
include = [
    "hatch_build.py",
    "src",
    "jarvis-packages",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "uv.lock",
]

[project.scripts]
clio-relay = "clio_relay.cli:app"

[dependency-groups]
dev = [
    "hatchling==1.31.0",
    "pip-audit>=2.10.0",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "twine>=6.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "jarvis-packages", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
